--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.1",
+    "pkg": "^4.4.9",
     "readline-sync": "^1.4.10"
   }
 }
