--- a/hereford/frontend/package.json
+++ b/hereford/frontend/package.json
@@ -3,7 +3,7 @@
   "author": "Vuurvos1",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "serve": "rollup -c -w",
     "start": "sirv public"
   },
   "devDependencies": {
